--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
+    "firebase": "^9.9.0",
     "next": "12.2.3",
+    "next-auth": "^4.10.2",
+    "notistack": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
