--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.10.2",
     "notistack": "^2.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-ts-tradingview-widgets": "^1.0.11"
   },
   "devDependencies": {
     "eslint": "8.20.0",
