--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "firebase": "^9.9.0",
+    "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "next": "12.2.3",
-    "next-i18next": "^11.3.0",
     "notistack": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^11.18.3",
     "react-ts-tradingview-widgets": "^1.0.11"
   },
   "devDependencies": {
