--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "12.2.3",
     "notistack": "^2.0.5",
     "react": "18.2.0",
+    "react-country-region-selector": "^3.6.1",
+    "react-country-region-selector-material-ui-new": "^1.5.2",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.3",
     "react-ts-tradingview-widgets": "^1.0.11"
