--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "next": "12.2.3",
+    "nodemailer": "^6.8.0",
     "notistack": "^2.0.5",
     "react": "18.2.0",
     "react-country-region-selector": "^3.6.1",
